syntax = "proto3";

option go_package = "github.com/mamachengcheng/octopus";

package backend;

service Watcher {
  rpc GetInfo (Request) returns (Reply) {}
}

message Request {
  int32 code = 1;
}

message Reply {
  double cpuPercent = 1;
  double memoryPercent = 2;
  double diskPercent = 3;
}
